<resources>
    <string name="app_name">Lannister</string>

    <string name="character_list_title">Characters</string>

    <string name="character_title">Character</string>
    <string name="character_name">Name:</string>
    <string name="character_gender">Gender:</string>
    <string name="character_culture">Culture:</string>
    <string name="character_born">Born:</string>
    <string name="character_died">Died:</string>
    <string name="character_titles">Titles:</string>
    <string name="character_aliases">Aliases:</string>
    <string name="character_father">Father:</string>
    <string name="character_mother">Mother:</string>
    <string name="character_spouse">Spouse:</string>
    <string name="character_allegiances">Allegiances:</string>
    <string name="character_books">Books:</string>
    <string name="character_povBooks">POV Books:</string>
    <string name="character_tvSeries">TV Series:</string>
    <string name="character_playedBy">Played by:</string>
</resources>
